# AppImage-Desktop-Installer

./: README.md  appimage_desktop_creator.py  pyproject.toml
src/appimage_desktop_installer/: __init__.py  __main__.py
